--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@turf/bbox": "^6.5.0",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
     "maplibre-gl": "^2.4.0"
