--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@turf/bbox": "^6.5.0",
     "@turf/distance": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
     "@turf/point-on-feature": "^6.5.0",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
