--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@turf/point-on-feature": "^6.5.0",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
-    "maplibre-gl": "^2.4.0"
+    "maplibre-gl": "^2.4.0",
+    "react-draggable": "^4.4.5"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
